--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 <head>
 	<title>KTHXBYE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link rel="icon" href="fav.png">
+	<link rel="shortcut icon" href="fav.png">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 	<div class="container">
-		<iframe class="bg-video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0&rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="bg-video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0&rel=0&start=15" frameborder="0" allowfullscreen></iframe>
 
 		<div class="vertical-center">
 
 			<svg width='128px' height='128px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-hourglass"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g><path fill="none" stroke="#007282" stroke-width="5" stroke-miterlimit="10" d="M58.4,51.7c-0.9-0.9-1.4-2-1.4-2.3s0.5-0.4,1.4-1.4 C70.8,43.8,79.8,30.5,80,15.5H70H30H20c0.2,15,9.2,28.1,21.6,32.3c0.9,0.9,1.4,1.2,1.4,1.5s-0.5,1.6-1.4,2.5 C29.2,56.1,20.2,69.5,20,85.5h10h40h10C79.8,69.5,70.8,55.9,58.4,51.7z" class="glass"></path><clipPath id="uil-hourglass-clip1"><rect x="15" y="20" width="70" height="25" class="clip"><animate attributeName="height" from="25" to="0" dur="2s" repeatCount="indefinite" vlaues="25;0;0" keyTimes="0;0.5;1"></animate><animate attributeName="y" from="20" to="45" dur="2s" repeatCount="indefinite" vlaues="20;45;45" keyTimes="0;0.5;1"></animate></rect></clipPath><clipPath id="uil-hourglass-clip2"><rect x="15" y="55" width="70" height="25" class="clip"><animate attributeName="height" from="0" to="25" dur="2s" repeatCount="indefinite" vlaues="0;25;25" keyTimes="0;0.5;1"></animate><animate attributeName="y" from="80" to="55" dur="2s" repeatCount="indefinite" vlaues="80;55;55" keyTimes="0;0.5;1"></animate></rect></clipPath><path d="M29,23c3.1,11.4,11.3,19.5,21,19.5S67.9,34.4,71,23H29z" clip-path="url(#uil-hourglass-clip1)" fill="#ffab00" class="sand"></path><path d="M71.6,78c-3-11.6-11.5-20-21.5-20s-18.5,8.4-21.5,20H71.6z" clip-path="url(#uil-hourglass-clip2)" fill="#ffab00" class="sand"></path><animateTransform attributeName="transform" type="rotate" from="0 50 50" to="180 50 50" repeatCount="indefinite" dur="2s" values="0 50 50;0 50 50;180 50 50" keyTimes="0;0.7;1"></animateTransform></g></svg>
 
-			<h1>Brace yourself</h1>
+			<h1>Never gonna give you up</h1>
 
-			<p>We're no strangers to love.. You know the rules and so do I</p>
-			<p>A full commitment's what I'm thinking of.. You wouldn't get this from any other guy</p>
-			<p>I just wanna tell you how I'm feeling.. Gotta make you understand</p>
+			<div class="lyric">
+				<p>We're no strangers to love.. You know the rules and so do I</p>
+				<p>A full commitment's what I'm thinking of.. You wouldn't get this from any other guy</p>
+				<p>I just wanna tell you how I'm feeling.. Gotta make you understand</p>
+				<h2>yess.. our friend will be banished in</h2>
+			</div>
 
-			<h2>yess.. our friend will be banished in</h2>
 			<div class="countdown" data-until="2016-08-26 17:00">
 				<span class="countdown-row countdown-show4">
 					<span class="countdown-section">
@@ -55,6 +59,10 @@
 			setTimeout(function(){
 				$('.bg-video').addClass('reveal');
 			}, 2000);
+
+			setTimeout(function(){
+				$('.lyric').addClass('show');
+			}, 6000);
 		});
 	</script>
 
