--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 			<h1>Never gonna give you up</h1>
 
 			<div class="lyric">
-				<p>We're no strangers to love.. You know the rules and so do I</p>
-				<p>A full commitment's what I'm thinking of.. You wouldn't get this from any other guy</p>
-				<p>I just wanna tell you how I'm feeling.. Gotta make you understand</p>
-				<h2>yess.. our friend will be banished in</h2>
+				<h2>Our friend will be banished in</h2>
 			</div>
 
 			<div class="countdown" data-until="2016-08-26 17:00">
@@ -45,7 +42,7 @@
 					</span>
 				</span>
 			</div>
-
+			<h2 style="font-size:40px;text-align:center">KTHXBYE</h2>
 		</div>
 	</div>
 
