change font type KTHXBYE

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</span>
 				</span>
 			</div>
-			<h2 style="font-size:40px;text-align:center">KTHXBYE</h2>
+			<h2 style="font-size:50px;text-align:center;font-family:courier">KTHXBYE</h2>
 		</div>
 	</div>
 
