--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			<h1>Never gonna give you up</h1>
 
 			<div class="lyric">
+				<p>You would never ask me why. My heart is so disguised</p>
+				<p>I just can't live a lie anymore. I would rather hurt myself</p>
+				<p></You>Than to ever make you cry. There's nothing left to try</p>
+				<p>Though it's gonna hurt us both. There's no other way than to say good-bye</p>
 				<h2>Our friend will be banished in</h2>
 			</div>
 
